# win-polyfill-loader

./: .clang-format  CMakeLists.txt  LICENSE  README.md
docs/: ntdll-nt-5.0.txt
src/loader/: BaseAddressIndex.cpp  BaseAddressIndex.h  CMakeLists.txt  ImportTable.cpp  ImportTable.h  Initialize.cpp  InvertedFunctionTable.cpp  InvertedFunctionTable.h  LdrEntry.cpp  LdrEntry.h  LoadDllMemoryApi.cpp  LoadDllMemoryApi.h  Loader.cpp  Loader.h  LoaderPrivate.h  Main.cpp  MemoryModule.cpp  MemoryModule.h  MmpDotNet.cpp  MmpDotNet.h  MmpGlobalData.h  MmpLdrpTls.cpp  MmpTls.cpp  MmpTls.h  MmpTlsFiber.cpp  MmpTlsFiber.h  MmpTlsp.h  ReflectiveLoader.c  ReflectiveLoader.h  Utils.cpp  Utils.h  stdafx.h  win-polyfill-string.h  win-polyfill-version.h
tests/: CMakeLists.txt  test-main.cpp
